--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -2,6 +2,10 @@ code {
   background-color: hsla(0, 0%, 0%, 0.04);
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   margin: 0;
   font-family: "Nunito", "Avenir", "Helvetica", "sans-serif";
